update down arrow for move pacman()

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class = 'side'>
             <div id = 'pac-man-logo'><img src="../images/pac-man-logo.png" alt="pac-man-logo"></div>
             <h3>Score: <span id='score'> 0 </span></h3>
+            <!-- <p>Manipulate Pacman using arrow buttons.</p>
+            <p>Eat all pac-dots, avoid ghosts. </p>
+            <p>After eating the power pellet you have 10 </p>
+            <p>seconds to eat ghosts.</p> -->
+
         </div>
         
     </div>  
